# HMX-EMS

./: .gitignore  DEVELOPER_HANDOVER.md
development/frappe-bench/apps/university_erp/: .dockerignore  .env.example  Dockerfile  INTEGRATION_AUDIT.md  LICENSE  MANIFEST.in  README.md  complete_phase6_deferred.sh  docker-compose.yml  pyproject.toml  setup.py  update_phase6_controllers.sh
development/frappe-bench/apps/university_erp/nginx/: nginx.conf
development/frappe-bench/apps/university_erp/nginx/conf.d/: university_erp.conf
development/frappe-bench/apps/university_erp/scripts/: audit_accessibility.py  audit_faculty_api.py  backup.sh  deploy.sh
development/frappe-bench/apps/university_erp/university_erp/: add_student_hall_ticket_permission.py  boot.py  hooks.py  jinja_utils.py  list_venues.py  modules.txt  test_dashboard_context.py  test_exams_page.py  test_frappe_format_time.py  test_hall_ticket_download.py  test_hall_tickets_context.py  test_library_page.py  test_portal_pages.py  test_venue_link.py  update_attendance_trend.py  update_student_cgpa.py  utils.py
development/frappe-bench/apps/university_erp/university_erp/faculty_management/: department_events.py  employee_events.py  leave_events.py
development/frappe-bench/apps/university_erp/university_erp/fixtures/: custom_field.json  custom_field_fees.json  role.json
development/frappe-bench/apps/university_erp/university_erp/integrations/: gl_integration.py
development/frappe-bench/apps/university_erp/university_erp/overrides/: __init__.py  assessment_result.py  course.py  fees.py  program.py  (+2 more)
(+2030 files in other folders)
