[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "university_erp"
version = "0.0.1"
description = "Comprehensive University Management System"
authors = [
    {name = "University", email = "support@university.edu"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Frappe",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "frappe>=15.0.0",
    "erpnext>=15.0.0",
    "hrms>=15.0.0",
    "education>=15.0.0",
    "razorpay>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/university/university_erp"
Repository = "https://github.com/university/university_erp.git"

[tool.bench.dev-dependencies]
pytest = "*"
